--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "james-portfolio",
   "version": "0.1.0",
-  "homepage": "https://james-demiraiakian.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -19,9 +18,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +40,6 @@
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
-    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
     "postcss-loader": "^7.0.0",
